# keras-models

./: .gitignore  LICENSE  README.md  environment.yaml  environment.yml  environment_cpu.yml  setup-env.sh  setup.cfg  setup.py
.devcontainer/: devcontainer.json
models-lib/layers/: residual.py  vgg.py
models_lib/: __init__.py
models_lib/layers/: __init__.py  inception.py  lstm.py  residual.py  vgg.py
models_lib/layers/utils/: sequential.py  sequential_composite.py
models_lib/models/: __init__.py  googlenet.py  mlp.py  residual.py  vgg.py
models_lib/utils/: __init__.py  data.py  jigsaw.py
tests/: mlp_test.py  residual_test.py  test_utils.py  vgg_layers_test.py  vgg_test.py
training/: dataset_factory.py  model_factory.py  train.py
training/configs/: cifar100_googlenet.yaml  cifar100_resnet.yaml  cifar100_vgg.yaml  iris_mlp.yaml
training_scripts/: model_factory.py  train.py  train_cifar_100.py  train_mlp_iris.py  train_mnist.py
training_scripts/model_configs/: cifar_vgg.yaml  mlp_iris.yaml
