[metadata]
name = models-lib-Jack-Hunt
version = 0.0.1
author = Dr J M Hunt
author_email = jackmileshunt@gmail.com
description = A small collection of ML layers and models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JackHunt/tf-models
project_urls =
    Bug Tracker = https://github.com/JackHunt/tf-models/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = models-lib
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src